# icarus-cdk

./: .clippy.toml  .gitignore  ALIGNMENT.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  GETTING_STARTED.md  LICENSE  Makefile  NOTICE  README.md  RELEASE_NOTES_v0.2.0.md  RELEASING.md  SECURITY.md  TODO.md  TROUBLESHOOTING.md  coverage.lcov  lcov.info  quick-test.sh  release.toml  rust-analyzer.toml  rust-toolchain.toml  test-ci.sh  test-release.sh
cli/: .gitignore  Cargo.toml  README.md
cli/.github/workflows/: release-cli.yml
cli/docs/: bridge-architecture.md  commands.md  deployment-guide.md  installation.md  troubleshooting.md
cli/scripts/: build-all.sh  install.sh
cli/src/: interactive.rs  main.rs
cli/src/bridge/: auth.rs  canister_client.rs  mcp_stdio.rs  mod.rs  oauth2.rs  param_mapper.rs  rmcp_server.rs  server.rs  translator.rs
cli/src/commands/: analyze.rs  build.rs  deploy.rs  mod.rs  monitor.rs  new.rs  test_http.rs  validate.rs
cli/src/config/: cargo_config.rs  marketplace.rs  mod.rs
cli/src/utils/: build_utils.rs  claude_desktop.rs  dfx.rs  mod.rs  platform.rs  ui.rs
cli/test/e2e/: factory_workflow_test.sh
cli/tests/common/: identity_utils.rs  mod.rs  parallel.rs  pocket_ic_utils.rs
cli/tests/e2e/: optimizations.md  test_authentication.rs  test_build_command.rs  test_deploy_command.rs  test_mcp_commands.rs  test_multi_client_mcp.rs  test_new_command.rs  test_validate_command.rs  test_wasi_native.rs  test_workflow.rs
crates/icarus/: Cargo.toml  MIGRATION.md  README.md  TROUBLESHOOTING.md
crates/icarus-bridge/: Cargo.toml  README.md
crates/icarus-bridge/src/: auth.rs  builder.rs  canister_client.rs  lib.rs  rmcp_server.rs
crates/icarus-canister/: Cargo.toml  README.md
crates/icarus-canister/src/: auth.rs  auth_tools.rs  easy_storage.rs  endpoints.rs  http.rs  lib.rs  lifecycle.rs  macros.rs  memory.rs  result.rs  stable_ext.rs  state.rs  storage.rs  timers.rs  tools.rs
crates/icarus-canister/tests/: test_endpoints.rs  test_http.rs  test_result.rs  test_timers.rs  test_tools.rs
crates/icarus-cli/: .mcp.json  Cargo.toml  LICENSE  Makefile  NOTICE  README.md
crates/icarus-cli/docs/: MCP_CLIENT_MANAGEMENT.md  bridge-architecture.md  commands.md  troubleshooting.md
crates/icarus-cli/scripts/: package.sh  release.sh  upload-to-icp.sh
crates/icarus-cli/src/: interactive.rs  lib.rs  main.rs  types.rs
crates/icarus-cli/tests/: README.md  e2e_workflow_tests.rs  integration_non_wasi_workflow.rs  integration_tests.rs  integration_wasi_workflow.rs  mcp_integration_tests.rs  template_validation_tests.rs  unit_tests.rs
crates/icarus-core/: Cargo.toml  PERFORMANCE_AUDIT.md  README.md  TESTING.md  test.sh
crates/icarus-core/benches/: performance_benchmarks.rs
crates/icarus-core/examples/: small_parameters_example.rs
crates/icarus-core/scripts/: validate_performance.sh
crates/icarus-core/src/: auth.rs  auth_tools.rs  builder.rs  certificate.rs  compatibility.rs  dual_protocol.rs  easy_storage.rs  endpoints.rs  error.rs  extensions.rs  http.rs  legacy.rs  lib.rs  lifecycle.rs  macros.rs  mcp.rs  memory.rs  newtypes.rs  outcalls.rs  persistent.rs  prompts.rs  protocol.rs  provider.rs  registry.rs  resource.rs  response.rs  result.rs  rmcp_types.rs  server.rs  session.rs  stable_ext.rs  state.rs  storage.rs  timers.rs  tool.rs  tools.rs  version.rs
crates/icarus-core/tests/: integration_comprehensive.rs  property_tests.proptest-regressions  property_tests.rs  test_auth_levels.rs  test_http_module.rs  test_persistent.rs  test_timers_module.rs  test_tools_module.rs
crates/icarus-derive/: Cargo.toml  README.md  lcov.info
crates/icarus-derive/src/: attr_tool.rs  auth_macro.rs  icarus_tools.rs  lib.rs  mcp_builder.rs  mcp_macro.rs  server.rs  storage.rs  tools.rs  utils.rs  validation.rs  wasi_macro.rs
crates/icarus-derive/tests/: helper_function_tests.rs  test_macro_integration.rs  ui.rs
crates/icarus-dev/: Cargo.toml  README.md
crates/icarus-dev/src/: init.rs  lib.rs  reset.rs  start.rs  status.rs  utils.rs  watch.rs
crates/icarus-macros/: Cargo.toml  README.md
crates/icarus-macros/benches/: macro_performance.rs
crates/icarus-macros/src/: error.rs  lib.rs  mcp.rs  tool.rs  utils.rs
crates/icarus-macros/tests/: auth_integration_tests.rs  compilation_tests.rs  error_handling_tests.rs  integration_comprehensive.rs  property_tests.proptest-regressions  property_tests.rs  simple_integration.rs  unit_property_tests.proptest-regressions  unit_property_tests.rs
crates/icarus-mcp/: Cargo.toml  README.md
crates/icarus-mcp/benches/: simd_comparison.rs  streaming_performance.rs
crates/icarus-mcp/examples/: basic_server.rs  custom_allocator.rs  feature_showcase.rs  performance.rs  streaming.rs
crates/icarus-mcp/src/: lib.rs  main.rs.bak  server.rs
crates/icarus-mcp/tests/: integration_test.rs  test_client.rs  test_integration.rs  test_protocol.rs  test_server.rs
crates/icarus-runtime/: Cargo.toml
crates/icarus-runtime/src/: error.rs  executor.rs  lib.rs  registry.rs
crates/icarus-runtime/tests/: hot_reload.rs  integration_comprehensive.rs  linkme_integration.rs
crates/icarus-test/: Cargo.toml
crates/icarus-test/src/: assertions.rs  harness.rs  lib.rs  mock.rs
crates/icarus-types/: Cargo.toml
crates/icarus-types/src/: config.rs  lib.rs  protocol.rs  translator.rs
crates/icarus-wasi/: Cargo.toml
crates/icarus-wasi/src/: conversion.rs  lib.rs
crates/icarus/src/: lib.rs
crates/icarus/templates/: README.md  async_http_tools.rs  basic_calculator.rs  stateful_counter.rs
crates/icarus/tests/: integration_test.rs
examples/auto-refresher/: Cargo.toml  README.md  dfx.json
examples/auto-refresher/src/: lib.rs
examples/basic-memory/: Cargo.toml  README.md  dfx.json
examples/basic-memory/src/: lib.rs
examples/http-fetcher/: Cargo.toml  dfx.json
examples/http-fetcher/src/: lib.rs
examples/memory-server/: Cargo.toml  dfx.json
templates/api-gateway/: Cargo.toml  README.md
templates/data-manager/: Cargo.toml  README.md
templates/task-scheduler/: Cargo.toml  README.md
(+159 files in other folders)
