[package]
name = "icarus-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Command-line tool for creating, building, testing, and deploying MCP servers to ICP"
license-file.workspace = true
repository.workspace = true
keywords = ["mcp", "icp", "blockchain", "cli"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
# CLI and async runtime
clap = { version = "4.5", features = ["derive", "env", "unicode", "wrap_help"] }
tokio = { version = "1.41", features = ["macros", "rt-multi-thread", "net", "time", "process", "fs", "io-util", "io-std"] }

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# HTTP and ICP interaction
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
ic-agent = "0.44"
candid = "0.10"
ic-identity-hsm = "0.44"
url = "2.5"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.9"
ciborium = "0.2"

# MCP Protocol
rmcp = { version = "0.6.3", features = ["server"] }

# Security and credentials
rand = "0.9"

# User interaction
indicatif = "0.18"
dialoguer = "0.12"
console = "0.16"
colored = "3.0"

# File system and utilities
dirs = "6.0"
which = "8.0"
tempfile = "3.12"
zip = "5.0"
tar = "0.4"
flate2 = "1.0"
is-terminal = "0.4"

# Platform detection
os_info = "3.8"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Process management
sysinfo = "0.36"

# Auto-update
self_update = { version = "0.42", features = ["archive-tar", "archive-zip", "compression-flate2"] }

# ID generation
nanoid = "0.4"

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# Async utilities
futures = "0.3"
futures-util = "0.3"
tokio-tungstenite = { version = "0.27.0", features = ["native-tls"] }

[dev-dependencies]
tempfile = "3.14"
serial_test = "3.1"
assert_cmd = "2.0"
predicates = "3.1"
once_cell = "1.20"

[[bin]]
name = "icarus"
path = "src/main.rs"

[[test]]
name = "test_new_command"
path = "tests/e2e/test_new_command.rs"

[[test]]
name = "test_build_command"
path = "tests/e2e/test_build_command.rs"

[[test]]
name = "test_validate_command"
path = "tests/e2e/test_validate_command.rs"

[[test]]
name = "test_workflow"
path = "tests/e2e/test_workflow.rs"
