[package]
name = "icarus-canister"
version.workspace = true
authors.workspace = true
edition.workspace = true
license-file.workspace = true
repository.workspace = true
description = "ICP canister integration with stable memory for persistent MCP servers"
documentation = "https://docs.rs/icarus"
homepage = "https://github.com/galenoshea/icarus-sdk"
readme = "README.md"
keywords = ["icp", "internet-computer", "mcp", "canister", "stable-memory"]
categories = ["development-tools", "web-programming", "wasm"]

[lints]
workspace = true

[dependencies]
icarus-core = { workspace = true }
icarus-derive = { workspace = true }
rmcp = { workspace = true }
ic-cdk = { workspace = true }
ic-cdk-macros = { workspace = true }
ic-cdk-timers = { workspace = true }
ic-stable-structures = { workspace = true }
ic-management-canister-types = { workspace = true }
candid = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
