[package]
name = "icarus-core"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Core abstractions for building MCP servers on ICP"
documentation = "https://docs.rs/icarus"
homepage = "https://github.com/galenoshea/icarus-sdk"
readme = "README.md"
keywords = ["icp", "internet-computer", "mcp", "ai", "canister"]
categories = ["development-tools", "web-programming", "wasm"]

[dependencies]
rmcp = { workspace = true }
ic-cdk = { workspace = true }
candid = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }