[package]
name = "icarus-core"
version.workspace = true
authors.workspace = true
edition.workspace = true
license-file.workspace = true
repository.workspace = true
description = "Core abstractions for building MCP servers on ICP"
documentation = "https://docs.rs/icarus"
homepage = "https://github.com/galenoshea/icarus-sdk"
readme = "README.md"
keywords = ["icp", "internet-computer", "mcp", "ai", "canister"]
categories = ["development-tools", "web-programming", "wasm"]

[lints]
workspace = true

[features]
default = ["canister"]

# Core feature groups
canister = ["ic-cdk", "ic-cdk-timers", "ic-stable-structures"]
mcp = ["client", "server", "streaming", "anyhow", "tracing"]

# MCP sub-features
client = ["networking", "ic-agent", "rustc-hash"]
server = ["client", "protocol", "tokio", "tracing-subscriber"]
streaming = ["storage", "bytes", "tokio-stream", "tokio"]
protocol = []
networking = ["url", "once_cell", "tokio"]
storage = ["bytes"]
cli = ["clap", "is-terminal", "tracing-subscriber"]

# Performance optimization features
simd = ["wide"]

[dependencies]
# Core dependencies (always included)
candid = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
base64 = { workspace = true }
ciborium = { workspace = true }

# Dependencies used by core modules (not feature-gated)
smallvec = { workspace = true }
async-trait = { workspace = true }
rmcp = { workspace = true }


# MCP feature dependencies
anyhow = { workspace = true, optional = true }
tracing = { workspace = true, optional = true }
ic-agent = { workspace = true, optional = true }
tokio = { workspace = true, optional = true, features = ["sync", "time"] }
rustc-hash = { workspace = true, optional = true }
bytes = { workspace = true, optional = true }
tokio-stream = { version = "0.1", optional = true }
url = { workspace = true, optional = true }
once_cell = { workspace = true, optional = true }
clap = { workspace = true, features = ["derive", "env"], optional = true }
is-terminal = { workspace = true, optional = true }
tracing-subscriber = { workspace = true, optional = true }
wide = { version = "0.7", optional = true }

# Canister feature dependencies
ic-cdk = { workspace = true, optional = true }
ic-cdk-timers = { workspace = true, optional = true }
ic-stable-structures = { workspace = true, optional = true }

[dev-dependencies]
tokio = { workspace = true, features = ["sync", "time"] }
