[package]
name = "icarus-dev"
version.workspace = true
authors.workspace = true
edition.workspace = true
license-file.workspace = true
repository.workspace = true
documentation = "https://docs.rs/icarus-dev"
homepage.workspace = true
description = "Development tools for the Icarus SDK - Enhanced file watching, status monitoring, and project management"
keywords = ["icp", "development", "tools", "watch", "devtools"]
categories = ["development-tools", "command-line-utilities"]

[dependencies]
# Core dependencies
anyhow.workspace = true
tokio = { workspace = true, features = ["full"] }
tracing.workspace = true

# File watching
notify.workspace = true

# UI and interaction
colored.workspace = true
dialoguer.workspace = true
indicatif.workspace = true

# Process management
which.workspace = true

# Serialization
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
toml.workspace = true

# Time utilities
chrono.workspace = true

[dev-dependencies]
tempfile.workspace = true
